--- a/test.html
+++ b/test.html
@@ -72,7 +72,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         <div class="frame frame1">
                         <section class="articleMainMedia">
-                <a href="/media/thumbnail/w1000/892406.jpeg" title="Guverner HNB-a Boris Vujčić" data-source="Pixsell" data-author="Profimedia, Pixsell" class="enlargeImage">
+                <a href="892406.jpeg" title="Guverner HNB-a Boris Vujčić" data-source="Pixsell" data-author="Profimedia, Pixsell" class="enlargeImage">
     <div class="aspectImg r5to3">
         <img class="lateImage lateImageLoaded" data-src="/media/thumbnail/900x540/892406.jpeg?cropId=0" alt="Guverner HNB-a Boris Vujčić" src="892406.jpeg?cropId=0">
     </div>
